src/objects/Tier2Email__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Category__c</fullName>
        <label>Tier 2 Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_1__c</fullName>
        <label>Email Address 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address_2__c</fullName>
        <label>Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address_3__c</fullName>
        <label>Email Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Email_Address__c</fullName>
        <label>From Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Tier2Email</label>
</CustomObject>